# OpenLogi

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  crowdin.yml  devenv.nix  release-plz.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release-plz.yml  release.yml
crates/openlogi-agent/: Cargo.toml
crates/openlogi-agent-core/: Cargo.toml
crates/openlogi-agent-core/src/: device_order.rs  hook_runtime.rs  lib.rs  orchestrator.rs  transport.rs
crates/openlogi-agent-core/src/watchers/: foreground_app.rs  gesture.rs  inventory.rs
crates/openlogi-agent/src/: launch_agent.rs  main.rs  server.rs
crates/openlogi-assets/: Cargo.toml
crates/openlogi-assets/src/: http.rs  index.rs  metadata.rs
crates/openlogi-cli/: Cargo.toml
crates/openlogi-cli/src/: lib.rs  main.rs
crates/openlogi-cli/src/cmd/: list.rs  mod.rs
crates/openlogi-cli/src/cmd/assets/: sync.rs
crates/openlogi-core/: Cargo.toml
crates/openlogi-core/examples/: inject_action.rs
crates/openlogi-core/src/: binding.rs  config.rs  device.rs  lib.rs  paths.rs
crates/openlogi-gui/: Cargo.toml
crates/openlogi-gui/locales/: app.yml  da.yml  de.yml  el.yml  en.yml  es.yml  fi.yml  fr.yml  it.yml  ja.yml  ko.yml  nb.yml  nl.yml  pl.yml  pt-BR.yml  pt-PT.yml  ru.yml  sv.yml  zh-CN.yml  zh-HK.yml  zh-TW.yml
crates/openlogi-gui/src/: app.rs  app_menu.rs  i18n.rs  ipc_client.rs  launch_agent.rs  main.rs  state.rs  theme.rs
crates/openlogi-gui/src/asset/: index.rs  mod.rs  sync.rs
crates/openlogi-gui/src/components/: device_carousel.rs  dpi_panel.rs
crates/openlogi-gui/src/data/: mouse_buttons.rs
crates/openlogi-gui/src/mouse_model/: picker.rs  view.rs
crates/openlogi-gui/src/platform/: permissions.rs  updater.rs
crates/openlogi-gui/src/state/: devices.rs
crates/openlogi-gui/src/windows/: about.rs  add_device.rs  mod.rs  settings.rs  update_consent.rs
crates/openlogi-hid/: Cargo.toml
crates/openlogi-hid/src/: gesture.rs  inventory.rs  lib.rs  pairing.rs  route.rs  transport.rs  windows_hid.rs  write.rs
crates/openlogi-hidpp/src/receiver/: mod.rs  unifying.rs
crates/openlogi-hook/: Cargo.toml
crates/openlogi-hook/examples/: print_events.rs
crates/openlogi-hook/src/: lib.rs  linux.rs
crates/optminus-cli/: Cargo.toml
crates/optminus-cli/src/: main.rs
crates/optminus-cli/src/cmd/: list.rs
crates/optminus-core/: Cargo.toml
crates/optminus-core/src/: config.rs  device.rs  lib.rs  paths.rs
crates/optminus-gui/src/: app.rs  main.rs
crates/optminus-gui/src/components/: device_carousel.rs
crates/optminus-hid/: Cargo.toml
crates/optminus-hid/src/: inventory.rs  lib.rs  transport.rs
docs/: DEVELOPMENT.md  INSTALL-linux.md
packaging/linux/: install.sh  uninstall.sh
scripts/: package-macos.sh  sync_bundle_assets.py
src/: main.rs
xtask/src/: linux.rs
