[package]
name = "openlogi-assets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Asset registry schema + blocking HTTP fetch helpers for the assets.openlogi.org device asset host. Shared by the openlogi CLI (bundle sync) and openlogi-gui (runtime cache)."
keywords = ["logitech", "openlogi", "assets", "hid"]
categories = ["hardware-support"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }
sha2 = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
backon = { workspace = true }

[lints]
workspace = true
