[package]
name = "openlogi-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "GPUI-based desktop UI for OpenLogi."

[[bin]]
name = "openlogi-gui"
path = "src/main.rs"

[dependencies]
openlogi-core = { path = "../openlogi-core" }
openlogi-hid = { path = "../openlogi-hid" }
# GPU-accelerated UI framework and its component library.
gpui = { workspace = true }
gpui_platform = { workspace = true }
gpui-component = { workspace = true }
# Tokio runs the one-shot HID enumeration before the GPUI app starts.
tokio = { workspace = true }
# Single error sink for the binary; libraries use thiserror.
anyhow = { workspace = true }
# Structured logging.
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Asset registry + per-device metadata are JSON on disk.
serde = { workspace = true }
serde_json = { workspace = true }
# Per-user cache directory resolution (mirrors openlogi-core/paths.rs).
directories = { workspace = true }
# Blocking HTTP for the startup asset sync against assets.openlogi.org.
ureq = { workspace = true }
# SHA-256 for asset cache validation.
sha2 = { workspace = true }

[lints]
workspace = true

# cargo-bundle config. Run `python3 scripts/sync_bundle_assets.py` to
# populate `assets/` from assets.openlogi.org, then `cargo bundle
# --release` to produce `target/release/bundle/osx/OpenLogi.app` with
# the assets baked into `Contents/Resources/assets/`.
#
# `resources` paths are resolved relative to this manifest; the named
# directory's contents are copied verbatim under `Resources/`.
[package.metadata.bundle]
name = "OpenLogi"
identifier = "dev.openlogi.openlogi"
version = "0.0.1"
category = "public.app-category.utilities"
short_description = "Lightweight local-first companion for Logitech HID++ peripherals."
long_description = """\
OpenLogi talks to Logitech HID++ mice and keyboards directly — no \
cloud account, no telemetry, no auto-update poller. Plain TOML config, \
single binary, ships with device renders bundled.
"""
osx_minimum_system_version = "13.0"
resources = ["assets"]
